Return error code when skipping already failed unload
If an unload evaluation of a module has already been tried and failed,
additional unload evaluation of this module is skipped but an error
code should be returned.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1551,6 +1551,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
             failed"
          # nullify this evaluation attempt to avoid duplicate issue report
          unregisterModuleEvalAttempt $context $mod $modfile
+         set ret 1
          continue
       }
 
