--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1173,9 +1173,11 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
       set loadedmodname [getLoadedMatchingName $modnamevr]
       if {$loadedmodname ne {}} {
          set modname $loadedmodname
-         set modnamevr $modname
-         if {[set vr [getVariantList $modname 1]] ne {}} {
-            append modnamevr " $vr"
+         if {[set vr [getVariantList $mod 1]] ne {}} {
+            lassign [parseModuleSpecification 0 0 0 0 $modname {*}$vr]\
+               modnamevr
+         } else {
+            set modnamevr $modname
          }
       }
 
