Add setConflictErrorAsReported helper procedure

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -2132,6 +2132,10 @@ proc reportMissingPrereqError {curmodnamevr modulepath_list args} {
    knerrorOrWarningIfForced $msg MODULES_ERR_GLOBAL
 }
 
+proc setConflictErrorAsReported {args} {
+   appendNoDupToList ::report_conflict([currentState evalid]) {*}$args
+}
+
 proc isConflictErrorAlreadyReported {msgrecid mod_con_list} {
    if {[info exists ::report_conflict($msgrecid)]} {
       return [isIntBetweenList $mod_con_list $::report_conflict($msgrecid)]
