Set conflict error as reported when emitting conun msg

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1804,6 +1804,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
                   loaded $modname] failed"
             }
             conun {
+               setConflictErrorAsReported $modname
                reportErrorOrWarningIfForced [getErrConUnMsg\
                   [getModuleDesignation loaded $modname]]
             }
