Adapt default arg treatment of isModuleUnloadable
Do not fetch currently unloading modules if no specific unmodlist
argument is set when calling isModuleUnloadable.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1533,7 +1533,8 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
          continue
       }
 
-      if {$onlyureq && ![isModuleUnloadable $modname]}  {
+      if {$onlyureq && ![isModuleUnloadable $modname\
+         [getUnloadingModuleList]]}  {
          reportDebug "$modname ($modfile) is required by loaded module or\
             asked by user"
          continue
