--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1226,6 +1226,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
 
          if {[isTopEvaluation] && ![info exists swprocessing]} {
             clearLoadedReqOfReloadingModuleList
+            clearLoadedReqOfUnloadingModuleList
          }
 
          set unload_mod_list {}
@@ -1639,6 +1640,7 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
 
             if {[isTopEvaluation]} {
                clearLoadedReqOfReloadingModuleList
+               clearLoadedReqOfUnloadingModuleList
             }
 
             set unload_mod_list [list {*}$depunlist $modname]
@@ -1730,6 +1732,8 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
          if {[isModuleRefreshQualified $modname]} {
             remove-path __MODULES_LMREFRESH $modname
          }
+
+         saveLoadedReqOfUnloadingModule $modname
 
          # get module position in loaded list to remove corresponding loaded
          # modulefile (entry at same position in _LMFILES_)
