cirrus: update OSX Sonoma test case config
Only one OSX image is now available (macos-runner:sonoma). Codecov has
also changed its binary for OSX to make it a arm64 executable.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -94,7 +94,7 @@ task:
   env:
     COVERAGE: y
   macos_instance:
-    image: ghcr.io/cirruslabs/macos-sonoma-xcode:latest
+    image: ghcr.io/cirruslabs/macos-runner:sonoma
   reqinstall_script:
     - brew update
     - brew install md5sha1sum expect dejagnu grep fish r tcl-tk gzip
@@ -106,7 +106,7 @@ task:
     - cd lib; gcov envmodules; cd ..
     - curl -Os https://uploader.codecov.io/latest/macos/codecov
     - chmod +x codecov
-    - arch -x86_64 ./codecov -t ${CODECOV_TOKEN}
+    - ./codecov
   << : *ARTIFACTS_TEMPLATE
 
 task:
