Add lprepend helper proc

--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -301,7 +301,7 @@ proc parseCollectionContent {fdata} {
                   lappend path_list $path
                # insert path to first position
                } else {
-                  set path_list [linsert $path_list 0 $path]
+                  lprepend path_list $path
                }
             }
          }
